# wg-pay-bot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
src/: db.sqlite3  manage.py  manage_bot.py
src/app_bot/: loader.py
src/app_bot/handlers/: admin.py  user.py
src/app_bot/keyboards/: inline.py  reply.py
src/app_bot/utils/: fsm.py
src/app_vpn/: admin.py  apps.py  models.py
src/app_vpn/management/commands/: test_deactivate.py  test_notify.py
src/app_vpn/migrations/: 0001_initial.py  0002_plan_purchase.py  0003_rename_plan_purchase_user_plan.py  0004_alter_tguser_subscription_end_date.py  0005_tguser_is_trial_used.py  0006_purchase_is_trial.py  0007_plan_max_devices.py
src/app_vpn/services/: create_vpn_conf.py  selectors.py  wg_api.py
src/app_vpn/task/: subscription_check.py  subscription_notifier.py
src/chill_vpn/: asgi.py  settings.py  wsgi.py
