[tool.poetry]
name = "chill-be"
version = "0.1.0"
description = "Wireguard TelegramPayBot"
authors = ["Тимофей Цепенников"]
license = "Private"
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2.1"
psycopg2 = "2.9.10"
pillow = "11.2.1"
python-dotenv = "1.1.0"
aiogram = "3.20.0.post0"
httpx = "0.28.1"
requests = "2.32.3"
loguru = "^0.7.3"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
django-stubs = "^5.0.2"


[tool.poetry.group.deploy.dependencies]
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

